--- a/etu-style.css
+++ b/etu-style.css
@@ -1,43 +1,60 @@
 
+        .navbar-brand{
+            padding-left: 20px;
+        }
         
+        .navbar-nav{
+            padding-left: 20px;
+        }
         .navbar-nav li.nav-item a.nav-link:hover {
             color: #333; /* Change to your desired color */
           }
-       
-        .aloitus.bg-image {
-            background-image: url('lumilautailu.webp');
-            height: 100vh;
-            opacity: 0.8;
-          }
-
-          .aloitus p{
-            max-width: 40%;
-          }
-
-          .aloitus {
+    
+        .koti {
             position: relative;
-          }
-          
-          .aloitus p {
-            position: absolute;
-            top: 50%;
-            left: 30%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
-            font-size: 46px;
-            font-weight: bolder;
-          }
-
-        .aloitus .bg-image {
-            height: 100vh;
-            position: relative;
+            height: 800px;
+            width: 100%;
+            display: table;
+            
+            align-items: center;
+            justify-content: center;
+         
         }
-          
+
+        .koti::before {
+            content: "";
+            background: url('lumilautailu.webp') no-repeat center center fixed;
+            background-size: cover;
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            bottom: 0px;left: 0px;
+            opacity: 0.55;
+         
+        }
+
+
+        .landing {
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle;
+        }
+       
+        .landing h1 {
+           
+            position: relative;
+            width: 40%;
+            padding-left: 30px;
+            
+            
+
+        }
+
         .tutustu-nappi {
             position: absolute;
-            border: none;
-            top: 70%;
-            left: 30%;
+        
+            top: 65%;
+            left: 25%;
             transform: translate(-50%, -50%);
             z-index: 1;
         }
@@ -53,135 +70,60 @@
         }
 
 
-
-        /* section {
-            width: 100%;
-            height: 800px;
-            float:left;
+        .esittely-osa h1{
+            padding-top: 120px;
+            padding-bottom: 20px; 
         }
-        section footer{
-            background-color: #709bc6;
-        }
+        .esittely-osa p{
         
-        #esittely{background-color: #f4f1ec; }
-        #esittely h1 {
-            padding: 60px 0;
-            font-size: 35px;
-            text-align: center;
-        }
-        #esittely p {
-            margin: auto;
-            width: 60%;
             font-size: 20px;
-            text-align: center;
         }
 
-        #kategoriat{background-color: #f4f1ec;}
-        #kategoriat h1{
-            padding: 60px 0;
-            font-size: 35px;
-            text-align: center;
+
+        .kategoriat-osa{
+            padding-top: 40px;
+            padding-bottom: 60px;
         }
 
-        .column {
-            float: left;
-            width: 1/3;
-            padding: 10px;
-            height: 550px;
+        .kategoriat-osa h2{
+            padding-top: 50px;
+            padding-bottom: 50px;
+                   
         }
-        .rivi:after{
-            content: "";
-            display: table;
-            clear:both;
+        .kategoriat-osa .col-sm {
+            padding-top: 20px;
+            padding-bottom: 20px;
         }
 
-        #kartta{background-color: #d6e6a3;text-align: center;}
-        #kartta h1{
-            padding: 60px 0;
-            font-size: 35px;
-            text-align: center;
+
+        .kartta-osa {
+            background-color: #7ed957;
+        }
+        .kartta-osa h2{
+            padding-top: 40px;
+            padding-bottom: 20px;
+                   
+        }
+        .kartta-osa iframe{
+            padding-bottom: 50px;
         }
 
-        footer{
-            background-color: #f4f1ec;
-            
+        .yhteystiedot h2{
+            text-align: left;
+            padding-top: 50px;
+            padding-bottom: 20px;
+            padding-left: 20px;
+    
         }
-        footer h1 p {
-            margin: 30px;
-        }
-        footer h1 {
-            margin: 30px;
-        }
-
-        footer ul {
-            margin: auto;
-            width: 90%;
-        }
-
 
         ul {
-            overflow: hidden;
-            width: 100%;
-            margin: 0;
-            list-style-type: none;
-        }
-        
-        ul li {
-            float: left;
-            
+             text-align: left;
+             list-style-position: inside;
         }
 
-        ul li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
+        li a {
             text-decoration: none;
+            font-weight:bold;
         }
 
-        li a:hover {
-            background-color: #183C5B;
-        }
-
-        
-        .aloitus {
-            background-color: #f4f1ec;
-   
-            height: 100%;
-         
-            background-position:center;
-            background-repeat: no-repeat;
-            background-size: 
-        }
-
-        .aloitus::before {
-            content: '';
-            position: absolute;
-            top: 0px;
-            right: 0px;
-            bottom: 0px;
-            left: 0px;
-            background-image: url("Lumilautailu.webp");
-            background-size: cover;
-            opacity: 0.7;
-        }
-
-
-        .etuteksti {
-            position: relative;
-            font-size: 40px;
-            top: 35%;
-            left: 10%;
-        }
-
-        button {
-            position: relative;
-            top: 40%;
-            left: 20%;
-            padding: 10px 20px;
-            border: none;
-            font-weight: bold;
-        }
-        button:hover{
-            background-color: #183C5B;
-        }*/
+       
