--- a/jarvi.css
+++ b/jarvi.css
@@ -4,8 +4,10 @@
 
 .aloitus.bg-image {
     background-image: url('lumilautailu.webp');
+    width: 100%;
     height: 100vh;
-    opacity: 0.8;
+    opacity: 0.7;
+
   }
 
   .aloitus p{
@@ -15,6 +17,16 @@
   .aloitus {
     position: relative;
   }
+
+  .aloitus h1 {
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    font-size: 16px;
+    font-weight: bolder;
+  }
   
   .aloitus p {
     position: absolute;
@@ -22,7 +34,7 @@
     left: 30%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    font-size: 46px;
+    font-size: 16px;
     font-weight: bolder;
   }
 
@@ -50,3 +62,27 @@
     font-size: 20px;
 }
 
+
+.steps {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+
+.yhteystiedot h2{
+    text-align: left;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+
+}
+
+ul {
+     text-align: left;
+     list-style-position: inside;
+}
+
+li a {
+    text-decoration: none;
+    font-weight:bold;
+}
