--- a/metsa.css
+++ b/metsa.css
@@ -49,3 +49,22 @@
     font-weight: bold;
     font-size: 20px;
 }
+
+
+.yhteystiedot h2{
+    text-align: left;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+
+}
+
+ul {
+     text-align: left;
+     list-style-position: inside;
+}
+
+li a {
+    text-decoration: none;
+    font-weight:bold;
+}
