--- a/jarvi.css
+++ b/jarvi.css
@@ -1,73 +1,101 @@
+.navbar-brand{
+  padding-left: 20px;
+}
+.navbar-nav{
+  padding-left: 20px;
+}
 .navbar-nav li.nav-item a.nav-link:hover {
-    color: #333; /* Change to your desired color */
-  }
+  color: #333; 
+}
 
-.aloitus.bg-image {
-    background-image: url('lumilautailu.webp');
+.col-md-6 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+  .koti {
+    padding-left: 8px;
+    position: relative;
+    min-height: 100vh;
     width: 100%;
-    height: 100vh;
-    opacity: 0.7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+}
 
-  }
-
-  .aloitus p{
-    max-width: 40%;
-  }
-
-  .aloitus {
-    position: relative;
-  }
-
-  .aloitus h1 {
+  .koti::before {
     position: absolute;
-    top: 20%;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    font-size: 16px;
-    font-weight: bolder;
-  }
-  
-  .aloitus p {
-    position: absolute;
+    content: "";
+    background: url('melonta2.jpg') no-repeat center center fixed;
     top: 50%;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    font-size: 16px;
-    font-weight: bolder;
-  }
-
-.aloitus .bg-image {
-    height: 100vh;
-    position: relative;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height:  auto;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 0.55;
+    z-index: -1;
 }
 
-.tutustu-nappi {
-    position: absolute;
-    border: none;
-    top: 70%;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
+.koti a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.koti a:hover {
+  background-color: #333;
+  color: white;
+}
+
+.col-sm {
+  text-align: center;
+}
+
+.esittely-osa h1{
+  padding-top: 100px;
+  padding-bottom: 20px; 
+}
+.esittely-osa p{
+
+  font-size: 20px;
 }
   
-.tutustu-nappi a {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #fff;
-    color: #000;
-    text-decoration: none;
-    font-weight: bold;
+  .luistelu {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .luistelu h2 {
+    text-align: center;
+  }
+
+
+  .container p {
     font-size: 20px;
-}
+  }
+  
+  .melonta {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .melonta h2 {
+    text-align: center;
+  }
+  
+  .uiminen {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 
-
-.steps {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
+  .uiminen h2 {
+    text-align: center;
+  }
 
 .yhteystiedot h2{
     text-align: left;
