--- a/etu-style.css
+++ b/etu-style.css
@@ -42,6 +42,7 @@
             color: #000;
             text-decoration: none;
             font-weight: bold;
+            border: 2px solid #000;
         }
 
         .koti a:hover {
